--- a/shell/templates/shell/base.html
+++ b/shell/templates/shell/base.html
@@ -13,22 +13,22 @@
     <meta name="application-name" content="MTB Club">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#ffffff">
-    {# <link rel="icon" sizes="192x192" href="{% static "shell/assets/icons/touch-icon.png" %}"> #}
+    <link rel="icon" sizes="192x192" href="{% static "shell/assets/icons/touch-icon.png" %}">
 
     <!-- iOS: 152x152px (180x180px) -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="MTB Club">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
-    {# <link rel="apple-touch-icon" href="{% static "shell/assets/icons/apple-touch-icon.png" %}"> #}
+    <link rel="apple-touch-icon" href="{% static "shell/assets/icons/apple-touch-icon.png" %}">
 
     <!-- Safari pinned tab: 80x80px -->
     {# <link rel="mask-icon" href="{% static "shell/assets/icons/website-icon.svg" %}" color="#393939"> #}
 
     <!-- Windows: 144x144px -->
     {# <meta name="msapplication-TileImage" content="{% static "shell/assets/icons/ms-touch-icon.png" %}"> #}
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-tap-highlight" content="no">
+    {# <meta name="msapplication-TileColor" content="#ffffff"> #}
+    {# <meta name="msapplication-tap-highlight" content="no"> #}
 
     <link rel="stylesheet" href="{% static 'shell/styles/shell.css' %}">
     <link rel="stylesheet" href="{% static 'shell/styles/base.css' %}">
@@ -48,15 +48,45 @@
             <li>
                 {% if user.is_authenticated %}
                     <a href="{% url 'dashboard__main' %}" class="main-header__logo">
-                        <svg width="50" height="28">
-                            <use xlink:href="#mini-logo"></use>
+                        <svg width="50" height="28" viewBox="0 0 446 247" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve">
+                            <g fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.41421">
+                                <path d="M231.357,122.929c16.622,-39.079 35.43,-77.828 58.643,-115.929c8.76,32.11 21.919,61.666 41,88l-13,55c14.882,-35.486 30.217,-69.747 47,-102c31.527,109.487 57.218,156.788 81,183l-72,0c-1.723,5.31 -1.67,10.63 0,16l-40,0c1.809,-5.949 1.563,-11.188 0,-16l-63.666,0c24.461,-51.074 -56.916,-43.188 -38.977,-108.071Zm-127.357,124.071l-40,0c1.781,-5.225 1.826,-10.561 0,-16l-64,0c32.593,-47.409 62.501,-103.918 81,-177c18.272,24.803 36.275,53.029 54,83l-14,-42c16.804,-32.205 30.753,-63.618 41,-95c11.265,41.342 26.618,79.184 44.906,114.163c-54.971,34.589 19.896,73.609 -50.028,116.837l-52.878,0c-1.692,4.923 -1.749,10.186 0,16Z" style="fill:url(#_LinearBackground);"></path>
+                                <path d="M156.795,231l-121.359,0c27.501,-46.618 40.432,-110.866 45.564,-177c18.272,24.803 36.275,53.029 54,83l-14,-42c16.787,-32.17 30.724,-63.552 41,-95c6.024,50.841 4.439,93.89 26.261,133.413c-13.92,29.654 25.897,62.239 -31.466,97.587Zm74.559,-108.032c16.593,-39.048 35.397,-77.793 58.646,-115.968c2.806,16.664 15.008,83.963 34.175,116.877l-6.175,26.123l9.828,-23.013c11.796,-27.286 24.04,-53.751 37.172,-78.987c14.435,90.507 25.897,148.693 45.73,183l-140.441,0c24.556,-51.075 -56.848,-43.169 -38.935,-108.032Z" style="fill:url(#_LinearForeground);"></path>
+                            </g>
+                            <defs>
+                                <linearGradient id="_LinearBackground" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1.41447e-14,-231,231,1.41447e-14,357,231)">
+                                    <stop offset="0" style="stop-color:currentColor;stop-opacity:0.733333"></stop>
+                                    <stop offset="0.49" style="stop-color:currentColor;stop-opacity:0.540654"></stop>
+                                    <stop offset="1" style="stop-color:currentColor;stop-opacity:0"></stop>
+                                </linearGradient>
+                                <linearGradient id="_LinearForeground" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1.89208e-14,-309,309,1.89208e-14,310,231)">
+                                    <stop offset="0" style="stop-color:currentColor;stop-opacity:0.768627"></stop>
+                                    <stop offset="0.5" style="stop-color:currentColor;stop-opacity:0.578731"></stop>
+                                    <stop offset="1" style="stop-color:currentColor;stop-opacity:0"></stop>
+                                </linearGradient>
+                            </defs>
                         </svg>
                         Mountain Bikers Club
                     </a>
                 {% else %}
                     <a href="{% url 'home' %}" class="main-header__logo">
-                        <svg width="50" height="28">
-                            <use xlink:href="#mini-logo"></use>
+                        <svg width="50" height="28" viewBox="0 0 446 247" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve">
+                            <g fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.41421">
+                                <path d="M231.357,122.929c16.622,-39.079 35.43,-77.828 58.643,-115.929c8.76,32.11 21.919,61.666 41,88l-13,55c14.882,-35.486 30.217,-69.747 47,-102c31.527,109.487 57.218,156.788 81,183l-72,0c-1.723,5.31 -1.67,10.63 0,16l-40,0c1.809,-5.949 1.563,-11.188 0,-16l-63.666,0c24.461,-51.074 -56.916,-43.188 -38.977,-108.071Zm-127.357,124.071l-40,0c1.781,-5.225 1.826,-10.561 0,-16l-64,0c32.593,-47.409 62.501,-103.918 81,-177c18.272,24.803 36.275,53.029 54,83l-14,-42c16.804,-32.205 30.753,-63.618 41,-95c11.265,41.342 26.618,79.184 44.906,114.163c-54.971,34.589 19.896,73.609 -50.028,116.837l-52.878,0c-1.692,4.923 -1.749,10.186 0,16Z" style="fill:url(#_LinearBackground);"></path>
+                                <path d="M156.795,231l-121.359,0c27.501,-46.618 40.432,-110.866 45.564,-177c18.272,24.803 36.275,53.029 54,83l-14,-42c16.787,-32.17 30.724,-63.552 41,-95c6.024,50.841 4.439,93.89 26.261,133.413c-13.92,29.654 25.897,62.239 -31.466,97.587Zm74.559,-108.032c16.593,-39.048 35.397,-77.793 58.646,-115.968c2.806,16.664 15.008,83.963 34.175,116.877l-6.175,26.123l9.828,-23.013c11.796,-27.286 24.04,-53.751 37.172,-78.987c14.435,90.507 25.897,148.693 45.73,183l-140.441,0c24.556,-51.075 -56.848,-43.169 -38.935,-108.032Z" style="fill:url(#_LinearForeground);"></path>
+                            </g>
+                            <defs>
+                                <linearGradient id="_LinearBackground" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1.41447e-14,-231,231,1.41447e-14,357,231)">
+                                    <stop offset="0" style="stop-color:currentColor;stop-opacity:0.733333"></stop>
+                                    <stop offset="0.49" style="stop-color:currentColor;stop-opacity:0.540654"></stop>
+                                    <stop offset="1" style="stop-color:currentColor;stop-opacity:0"></stop>
+                                </linearGradient>
+                                <linearGradient id="_LinearForeground" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1.89208e-14,-309,309,1.89208e-14,310,231)">
+                                    <stop offset="0" style="stop-color:currentColor;stop-opacity:0.768627"></stop>
+                                    <stop offset="0.5" style="stop-color:currentColor;stop-opacity:0.578731"></stop>
+                                    <stop offset="1" style="stop-color:currentColor;stop-opacity:0"></stop>
+                                </linearGradient>
+                            </defs>
                         </svg>
                         Mountain Bikers Club
                     </a>
