--- a/shell/templates/shell/symbols.html
+++ b/shell/templates/shell/symbols.html
@@ -1,4 +1,4 @@
-<svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve">
     <defs>
         <symbol id="void" viewBox="0 0 1 1"></symbol>
         {% comment %}
@@ -113,8 +113,5 @@
         <symbol id="buy-gift" viewBox="0 0 512 512">
             <path fill="currentColor" d="M32 448c0 17.7 14.3 32 32 32h160V320H32v128zm448-288h-42.1c6.2-12.1 10.1-25.5 10.1-40 0-48.5-39.5-88-88-88-41.6 0-68.5 21.3-103 68.3-34.5-47-61.4-68.3-103-68.3-48.5 0-88 39.5-88 88 0 14.5 3.8 27.9 10.1 40H32c-17.7 0-32 14.3-32 32v80c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16v-80c0-17.7-14.3-32-32-32zm-326.1 0c-22.1 0-40-17.9-40-40s17.9-40 40-40c19.9 0 34.6 3.3 86.1 80h-86.1zm206.1 0h-86.1c51.4-76.5 65.7-80 86.1-80 22.1 0 40 17.9 40 40s-17.9 40-40 40zm-72 320h160c17.7 0 32-14.3 32-32V320H288v160z"></path>
         </symbol>
-        <svg id="mini-logo" viewBox="0 0 66 37">
-            <path fill="currentColor" d="M33.67,19.389c2.611,-6.203 5.628,-12.346 9.33,-18.388c1.296,4.725 3.176,9.126 6,13l-2,8c2.202,-5.221 4.516,-10.254 7,-15c4.665,16.11 8.48,23.143 12,27l-10,0l0,3l-6,0l0,-3l-10.392,0c4.247,-7.711 -7.193,-7.048 -5.938,-14.612Zm-17.67,17.612l-6,0l0,-3l-10,0c4.823,-6.976 9.262,-15.246 12,-26c2.704,3.65 5.377,7.59 8,12l-2,-6c2.487,-4.738 4.484,-9.382 6,-14c1.64,5.986 3.85,11.449 6.493,16.515c-7.698,5.195 3.589,10.934 -8.479,17.485l-6.014,0l0,3Z"></path>
-        </svg>
     </defs>
 </svg>
