--- a/shell/templates/shell/base.html
+++ b/shell/templates/shell/base.html
@@ -162,7 +162,7 @@
         </ul>
     </footer>
     <div class="support-bar o-flex-inline">
-        <div class="o-flex-middle" style="flex: 0; margin-right: 10px;">
+        <div class="o-flex-middle" style="flex-basis: 24px; margin-right: 10px;">
             <svg width="24" height="24">
                 <use xlink:href="#bag-euro"></use>
             </svg>
