--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -12,6 +12,8 @@
     <meta property="og:site_name" content="Mountain Bikers Club">
     <meta property="og:locale" content="{{ LANGUAGE_CODE }}">
 
+    <meta property="og:type" content="fitness.course">
+
     {% if trail.thumbnail %}
         <meta property="og:image" content="https://mountainbikers.club{{ trail.thumbnail.url }}">
         <meta property="og:image:width" content="425">
