--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="fitness.course">
 
     {% if trail.thumbnail %}
-        <meta property="og:image" content="{{ trail.thumbnail.url }}">
+        <meta property="og:image" content="{{ trail.hero.url }}">
         <meta property="og:image:width" content="425">
         <meta property="og:image:height" content="225">
     {% endif %}
