--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="Mountain Bikers Club">
     <meta property="og:locale" content="{{ LANGUAGE_CODE }}">
 
-    <meta property="og:type" content="fitness.bikes">
+    <meta property="og:type" content="fitness.course">
 
     {% if trail.thumbnail %}
         <meta property="og:image" content="{{ trail.hero.url }}">
