--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -6,7 +6,7 @@
 
 {% block social %}
     <meta property="fb:app_id" content="422665564930714">
-    <meta property="og:type" content="fitness:course">
+    <meta property="og:type" content="fitness.course">
     <meta property="og:title" content="{{ trail.name|default:'Trail' }}">
     <meta property="og:description" content="{{ trail.description|default:'' }}">
     <meta property="og:url" content="https://mountainbikers.club{{ request.path }}">
