--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -5,31 +5,21 @@
 {% block description %}{{ trail.description|default:'' }}{% endblock %}
 
 {% block social %}
-    <meta property="fb:app_id" content="422665564930714">
-    <meta property="og:type" content="fitness.course">
-    <meta property="og:title" content="{{ trail.name|default:'Trail' }}">
-    <meta property="og:description" content="{{ trail.description|default:'' }}">
+    {% with trail.tracks|first as track %}
+        <meta property="og:title"
+              content="{{ trail.name|default:'Trail' }} ・ {{ track.location|default:'' }}">
+        <meta property="og:description"
+              content="{% trans 'Distance' %}: {{ track.distance|default:0|floatformat:"-2" }}km ・ {% trans 'Duration' %}: {{ track.moving_time|format_time }} ・ {% trans 'Uphill' %}: {{ track.uphill|default:0|floatformat:"0" }}m">
+    {% endwith %}
     <meta property="og:url" content="https://mountainbikers.club{{ request.path }}">
     <meta property="og:site_name" content="Mountain Bikers Club">
     <meta property="og:locale" content="{{ LANGUAGE_CODE }}">
+    <meta property="og:type" content="fitness.course">
 
     {% if trail.thumbnail %}
         <meta property="og:image" content="{{ trail.hero.url }}">
         <meta property="og:image:width" content="1280">
         <meta property="og:image:height" content="480">
-    {% endif %}
-
-
-    {% if trail.tracks %}
-        {% with trail.tracks|first as track %}
-            <meta property="fitness:distance:value" content="{{ track.distance|default:0|floatformat:"-2" }}">
-            <meta property="fitness:distance:units" content="km">
-            <meta property="fitness:duration:value" content="{{ track.moving_time|default:0|floatformat:"0" }}">
-            <meta property="fitness:distance:units" content="s">
-            <meta property="fitness:speed:value" content="{{ track.average_moving_speed|default:0|floatformat:"-2" }}">
-            <meta property="fitness:speed:units" content="km/h">
-            <meta property="fitness:calories" content="0">
-        {% endwith %}
     {% endif %}
 {% endblock %}
 
