--- a/shell/templates/shell/base.html
+++ b/shell/templates/shell/base.html
@@ -125,35 +125,35 @@
         </ul>
         <ul class="o-flex-inline has-horizontal-gutter is-center">
             <li>
-                <a href="https://fb.me/mountainbikersclub" target="_blank" rel="noopener">
+                <a href="https://fb.me/mountainbikersclub" target="_blank" rel="noopener" aria-label="{% trans 'Facebook page' %}">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#facebook"></use>
                     </svg>
                 </a>
             </li>
             <li>
-                <a href="https://m.me/mountainbikersclub" target="_blank" rel="noopener">
+                <a href="https://m.me/mountainbikersclub" target="_blank" rel="noopener" aria-label="{% trans 'Facebook Messenger' %}">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#messenger"></use>
                     </svg>
                 </a>
             </li>
             <li>
-                <a href="https://mastodon.social/@cedeber" target="_blank" rel="noopener">
+                <a href="https://mastodon.social/@cedeber" target="_blank" rel="noopener" aria-label="{% trans 'Mastodon social network' %}">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#mastodon"></use>
                     </svg>
                 </a>
             </li>
             <li>
-                <a href="https://github.com/cedeber/mountain-bikers-club" target="_blank" rel="noopener">
+                <a href="https://github.com/cedeber/mountain-bikers-club" target="_blank" rel="noopener" aria-label="{% trans 'Source Code on Github' %}">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#github"></use>
                     </svg>
                 </a>
             </li>
             <li>
-                <a href="https://www.buymeacoffee.com/cedeber" target="_blank" rel="noopener">
+                <a href="https://www.buymeacoffee.com/cedeber" target="_blank" rel="noopener" aria-label="{% trans 'Buy me a coffee support page' %}">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#buy-gift"></use>
                     </svg>
