simplify link param

--- a/shell/templates/shell/member_headerlinks.html
+++ b/shell/templates/shell/member_headerlinks.html
@@ -37,7 +37,7 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'member__main' username=user.username %}">
+            <a href="{% url 'member__main' user.username %}">
                 <svg width="20" height="20" viewBox="0 0 20 20" class="svg-icon">
                     <g fill="currentColor">
                         <path d="M9.5 11c-3.033 0-5.5-2.467-5.5-5.5s2.467-5.5 5.5-5.5 5.5 2.467 5.5 5.5-2.467 5.5-5.5 5.5zM9.5 1c-2.481 0-4.5 2.019-4.5 4.5s2.019 4.5 4.5 4.5c2.481 0 4.5-2.019 4.5-4.5s-2.019-4.5-4.5-4.5z"></path>
