--- a/member/templates/member/password_change.html
+++ b/member/templates/member/password_change.html
@@ -21,7 +21,7 @@
                         </div>
                         <div>
                             {% trans 'Cancel' as button_label %}
-                            {% url 'member__main' username=user.username as button_link %}
+                            {% url 'member__main' user.username as button_link %}
                             {% tpl_button button_label button_link class='is-secondary' %}
                         </div>
                     </div>
